# COMP550_FP

./: .gitignore  README.md  custom.bib  pyproject.toml  report_acl.tex  requirements-hf.txt  requirements.txt
configs/: benchmark_vs_rl.yaml  benchmark_vs_rl_mistral_full.yaml  benchmark_vs_rl_mistral_smoke.yaml  generator_large.yaml  mistral_subtype_analysis.yaml  mistral_subtype_analysis_small_test.yaml  rl_distribution_aware.yaml  sanity_check.yaml  subtype_analysis_multi_model.yaml
outputs/benchmark_vs_rl/: benchmark_vs_rl_grouped_summary.csv  benchmark_vs_rl_overall_summary.csv  benchmark_vs_rl_report.md  benchmark_vs_rl_results.csv  benchmark_vs_rl_shared_subtype_comparison.csv  benchmark_vs_rl_summary.json
outputs/distribution_aware_rl/: syntax_rl_distribution_aware_large_candidate_scores.csv  syntax_rl_distribution_aware_large_distribution_comparison.csv  syntax_rl_distribution_aware_large_summary.json  syntax_rl_distribution_aware_large_summary.md
outputs/sanity_check/: sanity_check_dataset_summary.json  sanity_check_duplicate_analysis.json  sanity_check_lexical_by_subtype.csv  sanity_check_lexical_diversity.json  sanity_check_manual_examples.json  sanity_check_manual_gpt2_hardest_rl.csv  sanity_check_manual_shared_subtype_examples.csv  sanity_check_manual_tiny_hardest_rl.csv  sanity_check_model_disagreement.csv  sanity_check_pair_validation.csv  sanity_check_report.md  sanity_check_summary.json  sanity_check_tiny_extreme_failures.csv
outputs/subtype_analysis_multi_model/: large_controlled_subtype_analysis_multi_model_accuracy_by_subtype.csv  large_controlled_subtype_analysis_multi_model_grouped_summary.csv  (+9 more)
(+43 files in other folders)
